# Linux-StreamDock-PythonSDK

./: DeviceManager.py  LibUSBHIDAPI.py  PILHelper.py  ProductIDs.py  README.md  StreamDock.py  StreamDock293.py  StreamDock293s.py  __init__.py  demo.py  main.py  pyproject.toml  使用说明.txt
src/: demo.py  main.py
src/StreamDock/: DeviceManager.py
src/StreamDock/Devices/: StreamDock293.py  StreamDock293s.py
src/StreamDock/Transport/: LibUSBHIDAPI.py
