[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "streamdock"
version = "0.1.1"
description = "A Python package to control streamdock device: https://bbs.key123.vip"
authors = [
    {name = "Hugo Zhu", email = "hugozhu@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pyudev",
    "pillow"
]
requires-python = ">=3.10.0"